Upgrade dependencies and improve validation and tests
- Updated Spring Boot to 3.3.8, SpringDoc to 2.6.0, and JaCoCo to 0.8.12.
- Added validation annotations to DTO and entity classes for stricter input checks.
- Refactored and updated PhoneNumberService for enhanced error handling and readability.
- Improved and expanded unit tests for edge cases and error scenarios in PhoneNumberService.